# Skills

.agents/: settings.json  settings.local.json
.agents/hooks/: validate_no_em_dash.py  validate_skill_structure.py
.agents/scripts/: README.md  scaffold_skill.py  validate_all.py  validate_bash.py  validate_skill.py  validate_skills.sh
.agents/skills/: README.md  SKILL-AUTHORING-STANDARD.md  SKILL_PIPELINE.md
.agents/skills/business/: INDEX.md
.agents/skills/cal_booking_skill/: SKILL.md
.agents/skills/content-writer/: SKILL.md  style-guide.md
.agents/skills/portfolio-doctor/: SKILL.md
.agents/skills/product-designer/: SKILL.md
.agents/skills/productivity/: INDEX.md  productivity-context.md
.agents/skills/templates/: SKILL.md  agent-template.md
.agents/skills/ui-ux-designer/: SKILL.md
.agents/skills/zcode-expert/: SKILL.md
.claude/: settings.json
.claude/scripts/: README.md  check_skill_structure.py  scaffold_skill.py  validate_all.py  validate_skill.py  validate_skills.sh  workspace_utils.py
.claude/skills/: README.md  SKILL-AUTHORING-STANDARD.md  SKILL_PIPELINE.md
.claude/skills/business/: CHANGELOG.md  business-context.md
.claude/skills/content/: CHANGELOG.md  INDEX.md  content-context.md
.claude/skills/content-writer/: SKILL.md  lint_content.py
.claude/skills/content/content-writer/scripts/: Makefile  generate_brief.py  lint_content.py  pyproject.toml
.claude/skills/content/content-writer/scripts/content_writer_skill/: __init__.py  cli.py  output_manager.py  pipeline.py
.claude/skills/content/content-writer/scripts/content_writer_skill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
.claude/skills/content/content-writer/scripts/content_writer_skill/lint/: __init__.py  engine.py  rules.py
.claude/skills/content/content-writer/scripts/content_writer_skill/models/: brief.py  draft.py  outline.py  validation_results.py
.claude/skills/content/content-writer/scripts/content_writer_skill/phases/: __init__.py  phase1_discover.py  phase5_pre_output.py
.claude/skills/content/content-writer/scripts/content_writer_skill/tests/: test_brief_validation.py  test_draft_generation.py  test_lint_validation.py  test_outline_generation.py  test_pipeline_integration.py  test_seo_audit.py  test_seo_validation.py
.claude/skills/design/: CHANGELOG.md  INDEX.md  design-context.md
.claude/skills/engineering/: CHANGELOG.md  INDEX.md  engineering-context.md
.claude/skills/product-designer/: SKILL.md
(+264 files in other folders)
